# open62541

./: .clang-tidy  .travis.yml  CMakeLists.txt
arch/win32/: ua_architecture.h
src/: ua_timer.c
tests/fuzz/: generate_corpus.sh
tools/: git-clang-tidy
tools/appveyor/: build.ps1
tools/cmake/: helper_arch.cmake  helper_buildtype.cmake  helper_compiler_clang.cmake  helper_compiler_gcc.cmake  helper_compiler_mingw-gcc.cmake  helper_compiler_msvc.cmake  helper_external.cmake  helper_option_dependent.cmake  helper_options.cmake  helper_tools.cmake  macros_internal.cmake
tools/travis/: travis_linux_script.sh  travis_osx_script.sh
